domain/src/main/java/com/example/domain/error/ErrorHandler.kt
package com.example.domain.error

interface ErrorHandler {
    fun getError(throwable: Throwable): HandWeatherErrorEntity
}